# medlang

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.md  FINAL_REPORT_V0.5.0.md  NEXT_STEPS_ROADMAP.md  PHASE_V1_INTEGRATION_COMPLETE.md  PHASE_V2_SMT_COMPLETE.md  PROJECT_STATUS_WEEKS_29_33.md  README.md  README_VIRTUAL_TRIALS.md  REAL_IMPROVEMENTS_SUMMARY.md  RELEASE_v0.5.0.md  SESSION_SUMMARY.md  STATUS.md  VERSION.md  WEEKS_31_32_RL_COMPLETE.md  WEEK_25_MODULE_SYSTEM.md  WEEK_26_TYPED_HOST_LANGUAGE.md  WEEK_27_ENUMS_AND_PATTERN_MATCHING.md  WEEK_28_CONTRACTS_INVARIANTS_ASSERTIONS.md  WEEK_29_FIRST_CLASS_SURROGATES.md  WEEK_30_SURROGATE_EVALUATION.md  WEEK_31_32_COMPLETE.md  WEEK_31_32_LANGUAGE_INTEGRATION.md  WEEK_31_RL_SUMMARY.md  WEEK_32_DELIVERY_SUMMARY.md  WEEK_33_DELIVERY_SUMMARY.md  WEEK_33_REGISTRY_COMPLETE.md  WEEK_33_REGISTRY_IMPLEMENTATION.md  WEEK_34_DELIVERY_SUMMARY.md
compiler/: Cargo.toml  PROMPT_DAY5_REFINEMENT_TYPES.md  README.md
compiler/src/: data.rs  datagen.rs  dataload.rs  effects.rs  endpoints.rs  epistemic.rs  ir.rs  lexer.rs  lib.rs  loader.rs  lower.rs  parser.rs  parser.rs.bak  parser_v1.rs  qm_stub.rs  resolve.rs  stanrun.rs  typeck.rs  typeck_v1.rs
compiler/src/ast/: contracts.rs  core_lang.rs  enum_decl.rs  evidence.rs  match_expr.rs  mod.rs  module.rs  pattern.rs  phase_v1.rs
compiler/src/codegen/: julia.rs  julia_pinn.rs  mod.rs  stan.rs
compiler/src/design/: mod.rs  optimize.rs  quantum_sensitivity.rs
compiler/src/diagnostics/: mcmc.rs  mod.rs  ppc.rs  quantum.rs  quantum_trust.rs  sbc.rs
compiler/src/evidence/: mod.rs  (+1 more)
compiler/tests/: ad_integration.rs  ast_construction.rs  composite_model_test.rs  end_to_end.rs  generics_integration.rs  golden_tests.rs  integration_test.rs  interop_integration.rs  julia_backend_tests.rs  lexer_integration.rs  mir_integration.rs  mir_lowlevel_tests.rs  parser_integration.rs  pbpk_integration_test.rs  pbpk_qsp_qm_week7.rs  phase_v1_integration.rs  protocol_parser_test.rs  qm_integration_test.rs  refinement_tests.rs  traits_integration.rs  typeck_integration.rs  validation_week1.rs  week25_module_system.rs  week54_pgx_extended.rs  week54_units_ontology.rs  week_29_surrogate_tests.rs  week_31_32_rl_integration.rs  week_33_registry_integration.rs  week_35_safety_tests.rs  week_36_distill_tests.rs  week_38_dose_guideline_tests.rs  week_39_dose_guideline_compare_tests.rs  week_42_robustness_tests.rs  week_44_scenario_attention_tests.rs
(+243 files in other folders)
